# ai-optix

./: .gitignore  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  CPU_EXECUTION.md  Cargo.toml  GPU_COMPARISON.md  INSTALLATION.md  PERFORMANCE_NOTES.md  README.md  main.py  mkdocs.yml  pyproject.toml  requirements-base.txt  requirements-cpu.txt
.github/workflows/: ci.yml  linux.yml  release.yml
ai_optix/: __init__.py  optix.py
ai_optix/api/: optimizer.py  profiler.py
ai_optix/benchmarks/: benchmark_accuracy.py  benchmark_speed.py
ai_optix/benchmarks/mebs/: __init__.py  batch_scaling.py  core_benchmark.py  device_manager.py  matmul_benchmark.py  mlp_benchmark.py  reporter.py  runner.py  timer.py
ai_optix/cli/: main.py
ai_optix/core/: selector.py
ai_optix/detector/: base.py  dataloader.py  gpu_idle.py
ai_optix/mebs/: __init__.py  api.py
ai_optix/mebs/core/: device.py  (+2 more)
ai_optix/profiler/: cpu.py  gpu.py  metrics.py
ai_optix/reports/: json_export.py  markdown_report.py
docs/: ARCHITECTURE.md  MEBS.md  PROJECT_AUDIT.md  index.md
examples/: slow_train.py  train.py
scripts/: setup.sh
site/: 404.html  index.html  search.html
site/ARCHITECTURE/: index.html
site/MEBS/: index.html
site/PROJECT_AUDIT/: index.html
site/search/: search_index.json
src/cpp/: kernels.cpp
src/rust/: Cargo.toml  build.rs
src/rust/src/: lib.rs  loader.rs  optimizer.rs
src/rust/src/profiler/: buffer.rs  ffi.rs  mod.rs
src/rust/src/profiler/monitors/: cpu.rs  gpu.rs
test_env/: pyvenv.cfg
tests/: test_integration.py  test_kernel_events.py  test_selector.py
(+3 files in other folders)
