[package]
name = "ai-optix-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["ai-foundation-software <ai.foundation.software@gmail.com>"]

[lib]
name = "ai_optix_core"
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
