[package]
name = "ai_optix_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_optix_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
numpy = "0.23"
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
cmake = "0.1"
